delete private scope

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bizfe/multi-mustache-loader",
+  "name": "multi-mustache-loader",
   "version": "0.0.2",
   "description": "multiple mustache loader for webpack. Allow multiple template write in on template file",
   "keywords": [
