remove minifier logic

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "multi-mustache-loader",
-  "version": "0.0.2",
+  "name": "@bizfe/multi-mustache-loader",
+  "version": "0.0.4",
   "description": "multiple mustache loader for webpack. Allow multiple template write in on template file",
   "keywords": [
     "webpack",
